--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,12 @@ debug = 1
 clap = { version = "4.5.4", features = ["derive"] }
 rand = "0.8.4"
 lazy_static = "1.4.0"
+deunicode = "1.3"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+rayon = "1.8"
+parking_lot = "0.12"
+chrono = "0.4"
 
 [features]
 remove_low_chance_instructions = []
