--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ serde_json = "1.0"
 rayon = "1.8"
 parking_lot = "0.12"
 chrono = "0.4"
+tch = {version = "0.19"}
 
 [features]
 remove_low_chance_instructions = []
