--- a/poke-engine-py/Cargo.toml
+++ b/poke-engine-py/Cargo.toml
@@ -12,6 +12,7 @@ crate-type = ["cdylib"]
 pyo3 = { version = "0.23.4", features = ["extension-module"] }
 poke-engine = { path = "../" }
 tch = {version = "0.19"}
+lazy_static = "1.4.0"
 
 [features]
 default = ["poke-engine/gen4"]
