--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ rayon = "1.8"
 parking_lot = "0.12"
 chrono = "0.4"
 tch = {version = "0.19"}
+rand_distr = "0.5.1"
 
 [features]
 remove_low_chance_instructions = []
